Fix img & video max-width on mobiles

--- a/src/LjdsBundle/Resources/public/css/_style-responsive.scss
+++ b/src/LjdsBundle/Resources/public/css/_style-responsive.scss
@@ -24,6 +24,21 @@
 			margin-top: 0;
 		}
 	}
+
+	.gifItem {
+		.gifMain {
+			.gifLink {
+				display: block;
+				margin-left: -15px;
+				margin-right: -15px;
+
+				img, video {
+					min-width: 0;
+					max-width: 100%;
+				}
+			}
+		}
+	}
 }
 
 @media (min-width: 480px) and (max-width: 768px) {
